--- a/EnvironmentSimulator/Modules/ScenarioEngine/CMakeLists.txt
+++ b/EnvironmentSimulator/Modules/ScenarioEngine/CMakeLists.txt
@@ -9,6 +9,10 @@ include(${CMAKE_SOURCE_DIR}/support/cmake/rule/disable_static_analysis.cmake)
 include(${CMAKE_SOURCE_DIR}/support/cmake/rule/disable_iwyu.cmake)
 include(${CMAKE_SOURCE_DIR}/support/cmake/rule/enable_fpic.cmake)
 
+# ############################### Zenoh ##############################################################################
+find_package(zenohc REQUIRED)
+find_package(zenohcxx REQUIRED)
+
 # ############################### Setting target files ###############################################################
 
 file(
@@ -60,7 +64,8 @@ add_library(
 
 target_link_libraries(
     ${TARGET}
-    PRIVATE project_options)
+    PRIVATE project_options
+    zenohcxx::zenohc)
 
 target_include_directories(
     ${TARGET}
