--- a/EnvironmentSimulator/CMakeLists.txt
+++ b/EnvironmentSimulator/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory(Libraries/esminiRMLib)
 # ############################### Building Applications ################################################################
 
 add_subdirectory(Applications/esmini)
-add_subdirectory(Applications/esmini-dyn)
+# add_subdirectory(Applications/esmini-dyn)
 add_subdirectory(Applications/esmini-zenoh)
 if(USE_OSG)
     add_subdirectory(Applications/odrviewer)
