--- a/EnvironmentSimulator/Applications/esmini-zenoh/CMakeLists.txt
+++ b/EnvironmentSimulator/Applications/esmini-zenoh/CMakeLists.txt
@@ -1,7 +1,7 @@
 # ############################### Setting targets ####################################################################
 
 set(TARGET
-    esmini-dyn)
+    esmini-zenoh)
 
 # ############################### Loading desired rules ##############################################################
 
