death to esmini-dyn

--- a/EnvironmentSimulator/CMakeLists.txt
+++ b/EnvironmentSimulator/CMakeLists.txt
@@ -89,9 +89,9 @@ set_folder(
 set_folder(
     esmini
     ${ApplicationsFolder})
-set_folder(
-    esmini-dyn
-    ${ApplicationsFolder})
+# set_folder(
+#     esmini-dyn
+#     ${ApplicationsFolder})
 set_folder(
     esmini-zenoh
     ${ApplicationsFolder})
